update the tagalog feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,7 +229,7 @@
     <string name="choose_your_user_type_to_continue">CHOOSE YOUR USER TYPE TO CONTINUE:</string>
     <string name="local_community">Local Community</string>
     <string name="overseas_donor">Overseas Donor</string>
-    <string name="previous1">← Previous</string>
+    <string name="previous1">← Back</string>
     <string name="next1">Next →</string>
     <string name="enter_verification_code">Enter Verification Code</string>
     <string name="we_ve_sent_a_code_to_juandelacruz_email_com">We\'ve sent a code to juandelacruz@email.com</string>
